# Lavender

./: .gitignore  Makefile  README.md  limine.conf
kernel/: Cargo.toml  build.rs  rustfmt.toml
kernel/src/: main.rs
kernel/src/environment/: mod.rs
kernel/src/environment/boot_protocol/: limine.rs
kernel/src/hal/: mod.rs
kernel/src/hal/bootinfo/: mod.rs
kernel/src/hal/drivers/: mod.rs
kernel/src/hal/drivers/rs232/: mod.rs
kernel/src/hal/drivers/sw_graphics/: mod.rs
kernel/src/hal/drivers/sw_graphics/framebuffer/: mod.rs
kernel/src/hal/drivers/uart/: mod.rs
kernel/src/hal/drivers/uart/uart_16550/: mod.rs
kernel/src/hal/isa/: mod.rs
kernel/src/hal/isa/implementations/x86_64/: memory.rs  (+2 more)
kernel/src/hal/isa/init/: mod.rs
kernel/src/hal/isa/instructions/: mod.rs
kernel/src/hal/isa/interfaces/: memory.rs
kernel/src/hal/isa/io/: aarch64.rs  interface.rs  mod.rs  x86_64.rs
kernel/src/hal/isa/lp_control/: mod.rs
kernel/src/hal/isa/memory/: mod.rs
kernel/src/init/: mod.rs
kernel/src/log/: mod.rs
kernel/src/memory/pmem/: mod.rs
nova/: Cargo.toml  rustfmt.toml
nova/src/: main.rs
nova/src/common/: cell.rs  io.rs  mod.rs
nova/src/console/: mod.rs
nova/src/console/terminal/: mod.rs
nova/src/environment/boot_protocol/: mod.rs
nova/src/environment/firmware/fdt/: mod.rs
nova/src/framebuffer/: chars.rs  colors.rs  console.rs  framebuffer.rs
nova/src/hal/: mod.rs
nova/src/hal/drivers/display/: mod.rs
nova/src/hal/drivers/uart/: mod.rs
nova/src/hal/environment/: mod.rs
nova/src/hal/environment/boot_protocol/: limine.rs  mod.rs
nova/src/hal/environment/firmware/: mod.rs
nova/src/hal/isa/: mod.rs
nova/src/hal/isa/aarch64/: mod.rs
nova/src/hal/isa/init/: mod.rs
nova/src/hal/isa/interface/: mod.rs
nova/src/hal/isa/io/: interface.rs  mod.rs  x86_64.rs
nova/src/hal/isa/lp_control/: mod.rs
nova/src/hal/isa/memory/: mod.rs
nova/src/hal/isa/system_info/: mod.rs
nova/src/hal/isa/x86_64/: mod.rs
nova/src/init/: interface.rs  mod.rs
nova/src/log/: mod.rs
nova/src/memory/: mod.rs
nova/src/memory/pmem/: mod.rs
(+58 files in other folders)
