[package]
name = "kernel"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kernel"
test = false
bench = false

[build-dependencies]

[dependencies]
limine = ">=0.3.1"
embedded-graphics = ">=0.8.1"
spin = ">=0.9.8"
allocator-api2 = "*"
