[package]
name = "kernel"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kernel"
test = false
bench = false

[features]
default = ["pc-like"]
#platform types
pc-like = ["acpi", "smbios", "uefi-rt"]
embedded = ["acpi", "fdt"]
qemu = ["virt"]
#firmware interfaces
acpi = []
uefi-rt = []
fdt = []
smbios = []
sbi = []
smc = []
#drivers
virt = []

[build-dependencies]

[dependencies]
limine = ">=0.3.1"
embedded-graphics = ">=0.8.1"
spin = ">=0.9.8"

[profile.dev]
panic = "abort"
lto = false
[profile.release]
panic = "abort"
lto = true